# gpu-raytracer

./: .gitignore  CMakeLists.txt  README.md  shell.nix
assets/: cornell.blend  cornell.glb
engine/: CMakeLists.txt
engine/include/engine/: acceleration_structure_builder.hpp  context.hpp  device.hpp  engine.hpp  renderer.hpp  resources.hpp  shader.hpp  util.hpp
engine/include/engine/vulkan/: acceleration_structure.hpp  buffer.hpp  command_buffers.hpp  command_pool.hpp  descriptor_pool.hpp  descriptor_set.hpp  device.hpp  fence.hpp  image.hpp  instance.hpp  pipeline.hpp  push_constants.hpp  sampler.hpp  semaphore.hpp  shader_binding_tables.hpp  shader_module.hpp  surface.hpp  swapchain.hpp  vulkan.hpp
engine/src/: acceleration_structure_builder.cpp  context.cpp  device.cpp  renderer.cpp  resources.cpp  shader.cpp
engine/src/vulkan/: acceleration_structure.cpp  buffer.cpp  command_buffers.cpp  command_pool.cpp  descriptor_pool.cpp  descriptor_set.cpp  device.cpp  fence.cpp  image.cpp  instance.cpp  pipeline.cpp  push_constants.cpp  sampler.cpp  semaphore.cpp  shader_binding_tables.cpp  shader_module.cpp  surface.cpp  swapchain.cpp
raytracer/: CMakeLists.txt
raytracer/src/: main.cpp
raytracer/src/examples/: pathtracer.cpp
raytracer/src/tutorial/: 01_hello_triangle.cpp  02_hello_sphere.cpp  03_camera.cpp  04_diffuse_lighting.cpp  05_anti_aliasing.cpp  06_reflection.cpp  07_passing_vertex_data.cpp
raytracer/src/util/: gltf_scene.cpp  gltf_scene.hpp  window.cpp  window.hpp
shaders/: CMakeLists.txt  main.slang
shaders/examples/: pathtracer.slang
shaders/tutorial/: 01_hello_triangle.slang  02_hello_sphere.slang  03_camera.slang  04_diffuse_lighting.slang  05_anti_aliasing.slang  06_reflection.slang  07_passing_vertex_data.slang
